--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "rollup": "rollup -c",
+    "rollup:watch": "watch \"npm run rollup\" src",
+    "less": "lessc less/style.less style.css",
+    "less:watch": "watch \"npm run less\" less",
+    "start": "concurrently \"npm run rollup:watch\" \"npm run less:watch\" \"live-server --watch=index.html,style.css,bundle.js ./\""
   },
   "author": "Bruno Dias",
   "license": "ISC",
   "devDependencies": {
+    "concurrently": "^3.5.0",
+    "less": "^2.7.2",
     "rollup": "^0.50.0",
     "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "watch": "^1.0.2"
   },
   "dependencies": {
+    "highlight.js": "^9.12.0",
     "jquery": "^3.2.1"
   }
 }
