--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codewall",
-  "version": "0.0.1",
-  "description": "",
+  "version": "1.0.0",
+  "description": "A web toy that turns source code into a e s t h e t i c",
   "main": "index.js",
   "scripts": {
     "rollup": "rollup -c",
@@ -11,7 +11,7 @@
     "start": "concurrently \"npm run rollup:watch\" \"npm run less:watch\" \"live-server --watch=index.html,style.css,bundle.js ./\""
   },
   "author": "Bruno Dias",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "concurrently": "^3.5.0",
     "less": "^2.7.2",
